--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,181 @@
-aiohttp==3.7.4.post0
-asgiref==3.3.4
-async-timeout==3.0.1
-attrs==21.2.0
-beautifulsoup4==4.9.3
+alabaster==0.7.12
+apsw==3.28.0.post1
+apturl==0.5.2
+archivebox==0.5.4
+asgiref==3.3.1
+astroid==2.4.2
+atomicwrites==1.4.0
+attrs==19.3.0
+Babel==2.9.0
+backcall==0.2.0
+bcrypt==3.1.7
+beautifulsoup4==4.9.1
+blinker==1.4
 bootstrap4==0.1.0
-cachetools==4.2.2
-certifi==2020.12.5
-chardet==4.0.0
-Django==3.2.3
+Brlapi==0.7.0
+bs4==0.0.1
+cachetools==4.1.0
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
+croniter==0.3.34
+cryptography==2.8
+css-parser==1.0.4
+cssselect==1.1.0
+cssutils==1.0.2
+cupshelpers==1.0
+cycler==0.10.0
+dateparser==1.0.0
+dbus-python==1.2.16
+decorator==4.4.2
+defer==1.0.6
+defusedxml==0.7.0rc1
+distro==1.4.0
+distro-info===0.23ubuntu1
+Django==3.1.3
 django-bootstrap4==3.0.1
-idna==2.10
-importlib-metadata==2.1.1
-ipinfo==4.2.0
-multidict==5.1.0
-pkg-resources==0.0.0
-pytz==2021.1
-requests==2.25.1
-selenium==3.141.0
-soupsieve==2.2.1
-sqlparse==0.4.1
-typing-extensions==3.10.0.0
-urllib3==1.26.4
-yarl==1.6.3
-zipp==3.4.1
+django-extensions==3.0.3
+dnspython==1.16.0
+docutils==0.17
+duplicity==0.8.12.0
+entrypoints==0.3
+fasteners==0.14.1
+feedparser==5.2.1
+FirstApp==1.3.0
+future==0.18.2
+google-auth==1.20.0
+google-auth-oauthlib==0.4.1
+gunicorn==20.0.4
+html2text==2020.1.16
+html5-parser==0.4.9
+html5lib==1.0.1
+httplib2==0.14.0
+idna==2.8
+ifaddr==0.1.6
+imagesize==1.2.0
+importlib-metadata==1.5.0
+ipinfo==3.0.0
+ipython==7.16.1
+ipython-genutils==0.2.0
+isort==4.3.21
+jedi==0.17.1
+Jinja2==2.11.3
+jsonschema==3.2.0
+keyring==18.0.1
+kiwisolver==1.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lazy-object-proxy==1.4.3
+lockfile==0.12.2
+louis==3.12.0
+lxml==4.5.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+Markdown==3.1.1
+MarkupSafe==1.1.0
+matplotlib==3.1.2
+mccabe==0.6.1
+mechanize==0.4.5
+monotonic==1.5
+more-itertools==4.2.0
+msgpack==0.6.2
+mypy-extensions==0.4.3
+mysqlclient==1.4.4
+natsort==7.1.1
+netifaces==0.10.4
+nose==1.3.7
+numpy==1.17.4
+oauthlib==3.1.0
+olefile==0.46
+packaging==20.3
+paramiko==2.6.0
+parso==0.7.0
+passlib==1.7.2
+pbr==5.4.5
+pep8==1.7.1
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==7.1.2
+prompt-toolkit==3.0.5
+protobuf==3.6.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio==0.2.11
+pycairo==1.16.2
+pychm==0.8.6
+pycryptodome==3.9.9
+pycryptodomex==3.9.9
+pycups==1.9.73
+pyflakes==2.2.0
+Pygments==2.6.1
+PyGObject==3.36.0
+PyJWT==1.7.1
+pylint==2.5.3
+pymacaroons==0.13.0
+PyMySQL==0.10.1
+PyNaCl==1.3.0
+pyparsing==2.4.6
+PyQt5==5.14.1
+PyQtWebEngine==5.14.0
+pyRFC3339==1.1
+pyrsistent==0.15.5
+python-apt==2.0.0+ubuntu0.20.4.4
+python-crontab==2.5.1
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+python3-openid==3.2.0
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+regex==2019.8.19
+reportlab==3.5.34
+repoze.lru==0.7
+requests==2.24.0
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+Routes==2.4.1
+rsa==4.6
+SecretStorage==2.3.1
+Send2Trash==1.5.0
+simplejson==3.16.0
+sip==4.19.21
+six==1.15.0
+snowballstemmer==2.1.0
+social-auth-app-django==4.0.0
+social-auth-core==3.3.3
+soupsieve==2.0.1
+Sphinx==3.5.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+sqlparse==0.3.1
+ssh-import-id==5.10
+systemd-python==234
+testresources==2.0.1
+toml==0.10.1
+traitlets==4.3.3
+typed-ast==1.4.1
+tzlocal==2.1
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+usb-creator==0.3.7
+w3lib==1.22.0
+wadllib==1.3.3
+wcwidth==0.2.5
+webencodings==0.5.1
+WebOb==1.8.5
+wrapt==1.12.1
+xkit==0.0.0
+youtube-dl==2021.2.10
+zeroconf==0.24.4
+zipp==1.0.0
